durga@48demo.com.bleadtest/src/objects/Event_Invitee__c.object
<CustomObject>
    <fields>
        <fullName>EI_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EI_FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EI_LastName__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Event_Invitees</relationshipLabel>
        <relationshipName>Event_Invitees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event_Invitee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EI_{0000000}</displayFormat>
        <label>EI_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event_Invitees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>